[package]
name = "enclose"
version = "1.2.0"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/Enclose.git"
homepage = "https://crates.io/crates/enclose"
license = "MIT | Apache-2.0"
readme = "README.md"
edition = "2021"

description = "A convenient macro, for cloning values into a closure."
keywords = ["enclose", "enclose_macro", "macro", "no_std", "clucompany"]
categories = ["development-tools"]

[dependencies]
